labs/4.6/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-web
  namespace: training
  labels:
    app: tls-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tls-web
  template:
    metadata:
      labels:
        app: tls-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
