labs/4.6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tls-web-svc
  namespace: training
spec:
  type: ClusterIP
  selector:
    app: tls-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
