labs/4.6/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: training
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - training-tls.local
      secretName: training-tls-secret
  rules:
    - host: training-tls.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tls-web-svc
                port:
                  number: 80
